--- a/daejeon_5_13_finalproject_yeoladin_FE/.env
+++ b/daejeon_5_13_finalproject_yeoladin_FE/.env
@@ -1,9 +1,6 @@
 #  반드시 변수 이름 앞에 VITE_ 접두사를 붙여야 import.meta.env에서 접근할 수 있습니다.
-VITE_KAKAO_REST_API_KEY=3a0fab56d06bdeadc6c55a6692ce5d63
-# VITE_APP_DEVELOP_FRONT_URL=http://192.168.205.56:5173/
-# VITE_APP_DEVELOP_BACKEND_URL=http://192.168.205.56:8080/
-VITE_APP_DEVELOP_FRONT_URL=http://192.168.205.63:5173/
-VITE_APP_DEVELOP_BACKEND_URL=http://192.168.205.63:8080/
-# VITE_APP_DEVELOP_FRONT_URL=http://localhost:5173/
-# VITE_APP_DEVELOP_BACKEND_URL=http://localhost:8080/
+VITE_KAKAO_REST_API_KEY=키입력
+VITE_KAKAO_JS_API_KEY=키입력
+VITE_APP_DEVELOP_FRONT_URL=ip
+VITE_APP_DEVELOP_BACKEND_URL=ip
 
