--- a/daejeon_5_13_finalproject_yeoladin_BE/src/main/resources/application.properties
+++ b/daejeon_5_13_finalproject_yeoladin_BE/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=finalPRJ_yeoladin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/yeradinDB?serverTimezone=UTC
 spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.password=password
 
 # Ã¬ÂÂ¬Ã¬Â§Â ÃªÂ´ÂÃ«Â Â¨
 spring.servlet.multipart.location=${user.home}/images
@@ -35,7 +35,7 @@ jwt.refresh-token-validity-seconds=604800
 
 # TODO: 01-2. spring ai 관련 속성들을 확인하세요.
 # 서비스 키
-spring.ai.openai.api-key=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
+spring.ai.openai.api-key=key
 # 사용할 OpenAI chat model의 이름
 spring.ai.openai.chat.options.model=o4-mini
 # 창의성을 제어하는데 사용되는 샘플링 온도: 높을 수록 창의성이 높아짐 - 뻘소리할 확율도.. (0~2)
@@ -47,8 +47,8 @@ spring.ai.openai.chat.options.maxCompletionTokens=10000
 # OAuth2 Client Configuration
 # ===============================
 # Google
-spring.security.oauth2.client.registration.google.client-id=744115781833-k4h4e48e0cdf5fh95uuksn6ui8i1a6lp.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=id
+spring.security.oauth2.client.registration.google.client-secret=secret
 spring.security.oauth2.client.registration.google.scope=profile,email
 # Redirect URIë Google Cloud Consoleì ë±ë¡ë ê²ê³¼ ì¼ì¹í´ì¼ í¨ (ë³´íµ /login/oauth2/code/google)
 
